# file_data_splitter

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt  test2.txt
src/: lib.rs  main.rs
tests/: integration_test.rs
